--- a/GenericWebShop/GenericWebShop/packages.config
+++ b/GenericWebShop/GenericWebShop/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.3" targetFramework="net40" />
   <package id="jQuery" version="1.7.2" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
+  <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net40" />
 </packages>
