--- a/GenericWebShop/GenericWebShop/web.config
+++ b/GenericWebShop/GenericWebShop/web.config
@@ -1,4 +1,8 @@
-﻿<configuration>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    </configSections>
 	<appSettings>
 		<add key="webpages:Version" value="2.0.0.0" />
 		<add key="PreserveLoginUrl" value="true" />
@@ -7,25 +11,25 @@
 	<system.web>
 		<compilation debug="true" targetFramework="4.0">
 			<assemblies>
-				<add assembly="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-				<add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-				<add assembly="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-				<add assembly="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+				<add assembly="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
 			</assemblies>
 		</compilation>
 	
 		<pages>
 			<namespaces>
-				<add namespace="System.Web.Helpers"/>
-				<add namespace="System.Web.Mvc"/>
-				<add namespace="System.Web.Mvc.Html"/>
-				<add namespace="System.Web.Routing"/>
-				<add namespace="System.Web.WebPages"/>
+				<add namespace="System.Web.Helpers" />
+				<add namespace="System.Web.Mvc" />
+				<add namespace="System.Web.Mvc.Html" />
+				<add namespace="System.Web.Routing" />
+				<add namespace="System.Web.WebPages" />
 			</namespaces>
 		</pages>
 	</system.web>
 	
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true"/>
+		<modules runAllManagedModulesForAllRequests="true" />
 	</system.webServer>
 </configuration>
