--- a/GenericWebShop/TestDataProvider/web.config
+++ b/GenericWebShop/TestDataProvider/web.config
@@ -32,4 +32,10 @@
 			<add name="" address= "" initCat="initCat" userName="" password="" adapter=""/>
 		</Servers>
 	</ServerAccessRules>
+
+  <appSettings>
+    <add key="ClaimsAuth.LoginUrl" value="COM2"/>
+    <add key="ClaimsAuth.Cookie.Name" value="COM2"/>
+    <add key="ClaimsAuth.Cookie.Timeout" value="3"/>
+  </appSettings>
 </configuration>
