--- a/GenericWebShop/TestDataProvider/web.config
+++ b/GenericWebShop/TestDataProvider/web.config
@@ -2,10 +2,10 @@
 <configuration>
   <system.serviceModel>
     <services>
-      <service name="TestDataProvider.Service">
+      <service name="GenericBackend.Service">
         <endpoint address=""
                   binding="webHttpBinding"
-                  contract="TestDataProvider.IService"
+                  contract="GenericBackend.IService"
 				  behaviorConfiguration="webHttp" />
       </service>
     </services>
@@ -20,7 +20,7 @@
  <configSections>
     <sectionGroup name="dataAccessGroup">
       <section name="ServerAccessRules" 
-        type="TestDataProvider.DataAccessor.ServerAccessRules"
+        type="GenericBackend.DataAccessor.ServerAccessRules"
         allowLocation="true" 
         allowDefinition="Everywhere"
       >
