--- a/GenericWebShop/TestDataProvider/GenericBackend.csproj
+++ b/GenericWebShop/TestDataProvider/GenericBackend.csproj
@@ -7,7 +7,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
     <RootNamespace>TestDataProvider</RootNamespace>
-    <AssemblyName>TestDataProvider</AssemblyName>
+    <AssemblyName>GenericBackend</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
   </PropertyGroup>
@@ -55,6 +55,7 @@
     <Compile Include="Cores\Authentication\ClaimsAuthentication.cs" />
     <Compile Include="Cores\Authentication\Encryptor.cs" />
     <Compile Include="Cores\Authentication\UserRight.cs" />
+    <Compile Include="Cores\BusinessLayer\DataFactory.cs" />
     <Compile Include="Cores\Contact.cs" />
     <Compile Include="Cores\Customer.cs" />
     <Compile Include="Cores\Employee.cs" />
@@ -78,6 +79,7 @@
   <ItemGroup>
     <Folder Include="Cores" />
     <Folder Include="Cores\Authentication" />
+    <Folder Include="Cores\BusinessLayer" />
     <Folder Include="DataAccessor" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
